[package]
name = "turtle-server"
version = "0.1.0"
authors = ["git@lorenz.kiwi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["client", "server", "http1", "http2", "stream"] }
futures = "0.3"
tokio = {version = "1.0", features = ["full"] }
clap = "2.33"
chrono = "0.4"
